--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                         </button>
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav"> 
                             <ul class="navbar-nav alt-font text-uppercase"> 
-                                <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+                                <li class="nav-item active"><a href="index.html" class="nav-link">Homes</a></li>
                                 <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                                 <li class="nav-item"><a href="tours.html" class="nav-link">Tours</a></li>
                                 <li class="nav-item"><a href="reviews.html" class="nav-link">Reviews</a></li>
