--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 <div class="container-fluid">
                     <div class="col-auto col-lg-2 me-auto">
                         <a class="navbar-brand w-50" href="index.html">
-                            <img src="images/home-banner/logo.png" data-at2x="images/home-banner/logo.png" alt="" class="default-logo w-100">
+                            <img src="#" data-at2x="images/home-banner/logo.png" alt="" class="default-logo w-100">
                             <img src="images/demo-travel-agency-logo-white.png" data-at2x="images/demo-travel-agency-logo-white@2x.png" alt="" class="alt-logo">
                             <img src="images/demo-travel-agency-logo-black.png" data-at2x="images/demo-travel-agency-logo-black@2x.png" alt="" class="mobile-logo"> 
                         </a>
