--- a/public/reviews.html
+++ b/public/reviews.html
@@ -356,7 +356,7 @@
                     </div>
                 </div>
             </div>
-        </sectio
+        </section>
         <footer class="bg-light-gray pb-40px">
             <div class="container">
                 <div class="row mb-2 md-mb-4 overlap-section" data-anime='{ "el": "childs", "translateY": [-15, 0], "scale": [0.5, 1], "opacity": [0,1], "duration": 800, "delay": 300, "staggervalue": 300, "easing": "easeOutQuad" }'>
