--- a/public/contact.html
+++ b/public/contact.html
@@ -170,21 +170,20 @@
                         <div class="mb-60px w-100 md-w-30 sm-w-50 xs-w-100 md-mb-30px sm-mb-40px float-start text-center text-sm-start">
                             <span class="d-block alt-font fs-22 fw-500 text-dark-gray ls-minus-05px mb-5px">Call us directly</span>
                             <div class="w-100 d-block mb-10px">
-                                <a href="tel:1800222000">1-800-222-000</a><br>
-                                <a href="tel:1800222002">1-800-222-002</a>
+                                <a href="tel:+201500330888">+20-150-033-0888</a><br>
                             </div>
                             <a href="tel:1800222000" class="btn btn-link-gradient expand btn-extra-large text-base-color text-base-color-hover ls-0px">Call us today<span class="bg-base-color"></span></a>
                         </div>
                         <div class="mb-60px w-100 md-w-40 sm-w-50 xs-w-100 md-mb-30px sm-mb-40px float-start text-center text-sm-start">
-                            <span class="d-block alt-font fs-22 fw-500 text-dark-gray ls-minus-05px mb-5px">Keep in touch</span>
-                            <p class="w-100 mb-10px mx-auto mx-sm-0">401 Broadway, 24th Floor,<br>Orchard View, London</p>
-                            <a href="https://maps.google.com/maps?ll=-37.805688,144.962312&amp;z=17&amp;t=m&amp;hl=en-US&amp;gl=IN&amp;mapclient=embed&amp;cid=13153204942596594449" target="_blank" class="btn btn-link-gradient expand btn-extra-large text-base-color text-base-color-hover ls-0px">Location map<span class="bg-base-color"></span></a>
+                            <span class="d-block alt-font fs-22 fw-500 text-dark-gray ls-minus-05px mb-5px">WhatsApp Chat</span>
+                            <p class="w-100 mb-10px mx-auto mx-sm-0"><a href="tel:+201111995077">+20-111-199-5077</a></p>
+                            <a href="https://api.whatsapp.com/send?phone=201111995077" class="btn btn-link-gradient expand btn-extra-large text-base-color text-base-color-hover ls-0px">Chat with Us<span class="bg-base-color"></span></a>
                         </div>
                         <div class="md-w-30 w-100 sm-w-100 sm-clear-both text-center text-sm-start float-start">
                             <span class="d-block alt-font fs-22 fw-500 text-dark-gray ls-minus-05px mb-5px">Need live support</span>
                             <div><a href="mailto:info@yourdomain.com">info@yourdomain.com</a></div>
                             <div class="mb-10px"><a href="mailto:hr@yourdomain.com">hr@yourdomain.com</a></div>
-                            <a href="mailto:info@yourdomain.com" class="btn btn-link-gradient expand btn-extra-large text-base-color text-base-color-hover ls-0px">Support desk<span class="bg-base-color"></span></a>
+                            <a href="mailto:support@yourdomain.com" class="btn btn-link-gradient expand btn-extra-large text-base-color text-base-color-hover ls-0px">Support Desk<span class="bg-base-color"></span></a>
                         </div>
                     </div>
                     <div class="col-lg-9" data-anime='{ "translateY": [0, 0], "opacity": [0,1], "duration": 1200, "delay": 100, "staggervalue": 150, "easing": "easeOutQuad" }'>
