--- a/public/contact.html
+++ b/public/contact.html
@@ -29,19 +29,7 @@
     <body data-mobile-nav-style="classic">  
         <!-- start header -->
         <header class="header-with-topbar">
-            <div class="header-top-bar top-bar-light bg-white md-border-bottom border-color-transparent-dark-very-light disable-fixed">
-                <div class="container-fluid">
-                    <div class="row h-45px align-items-center m-0">
-                        <div class="col-xl-6 col-lg-8 justify-content-center justify-content-lg-start">
-                            <div class="fs-15 text-dark-gray">We have a selection of over 50 tour programs! <a href="demo-travel-agency-destinations.html" class="text-base-color fw-500 text-decoration-line-bottom">Popular Destinations</a></div>
-                        </div>
-                        <div class="col-xl-6 col-lg-4 text-end d-none d-lg-flex">
-                            <a href="tel:02228899900" class="widget fs-15 text-dark-gray text-dark-gray-hover"><i class="feather icon-feather-phone-call text-base-color"></i> 0222 8899900</a>
-                            <div class="widget fs-15 ms-30px text-dark-gray d-none d-xl-inline-block"><i class="feather icon-feather-map-pin text-base-color"></i> Broadway, 24th Floor, San Francisco</div> 
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
             <!-- start navigation -->
             <nav class="navbar navbar-expand-lg header-transparent bg-transparent border-bottom border-color-transparent-white-light disable-fixed">
                 <div class="container-fluid">
@@ -170,15 +158,15 @@
                         <div class="mb-60px w-100 md-w-30 sm-w-50 xs-w-100 md-mb-30px sm-mb-40px float-start text-center text-sm-start">
                             <span class="d-block alt-font fs-22 fw-500 text-dark-gray ls-minus-05px mb-5px">Call us directly</span>
                             <div class="w-100 d-block mb-10px">
-                                <a href="tel:1800222000">1-800-222-000</a><br>
-                                <a href="tel:1800222002">1-800-222-002</a>
+                                <a href="tel:201500330888">+20-150-033-0888</a><br>
+                                
                             </div>
                             <a href="tel:1800222000" class="btn btn-link-gradient expand btn-extra-large text-base-color text-base-color-hover ls-0px">Call us today<span class="bg-base-color"></span></a>
                         </div>
                         <div class="mb-60px w-100 md-w-40 sm-w-50 xs-w-100 md-mb-30px sm-mb-40px float-start text-center text-sm-start">
-                            <span class="d-block alt-font fs-22 fw-500 text-dark-gray ls-minus-05px mb-5px">Keep in touch</span>
-                            <p class="w-100 mb-10px mx-auto mx-sm-0">401 Broadway, 24th Floor,<br>Orchard View, London</p>
-                            <a href="https://maps.google.com/maps?ll=-37.805688,144.962312&amp;z=17&amp;t=m&amp;hl=en-US&amp;gl=IN&amp;mapclient=embed&amp;cid=13153204942596594449" target="_blank" class="btn btn-link-gradient expand btn-extra-large text-base-color text-base-color-hover ls-0px">Location map<span class="bg-base-color"></span></a>
+                            <span class="d-block alt-font fs-22 fw-500 text-dark-gray ls-minus-05px mb-5px">WhatsApp Chat</span>
+                            <p class="w-100 mb-10px mx-auto mx-sm-0"><a href="tel:201500330888">+20-111-199-5077</a><br></p>
+                            <a href="https://api.whatsapp.com/send?phone=201111995077" target="_blank" class="btn btn-link-gradient expand btn-extra-large text-base-color text-base-color-hover ls-0px">Chat With US<span class="bg-base-color"></span></a>
                         </div>
                         <div class="md-w-30 w-100 sm-w-100 sm-clear-both text-center text-sm-start float-start">
                             <span class="d-block alt-font fs-22 fw-500 text-dark-gray ls-minus-05px mb-5px">Need live support</span>
