edit home banner

--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
                                 <div class="tp-caption tp-resizeme rs-parallaxlevel-2 background-image-layer" 
                                      id="slide-01-layer-01" 
                                      data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
-                                     data-y="['top','top','top','top']" data-voffset="['-200','0','0','0']" 
+                                     data-y="['top','top','top','top']" data-voffset="['-100','0','0','0']" 
                                      data-width="['2200','100%','2200','2000']"
                                      data-height="100%"
                                      data-whitespace="nowrap"
@@ -166,14 +166,14 @@
                                      data-visibility="['on','on','off','off']"
                                      data-frames='[{"delay":0,"speed":1000,"frame":"0","from":"y:100;z:0;rX:0deg;rY:0;rZ:0;sX:2;sY:2;skX:0;skY:0;fb:20;opacity:0;","to":"o:1;fb:0;","ease":"power2.out"},{"delay":"wait","speed":1200,"frame":"999","to":"x:left(L);sX:1;sY:1;opacity:1;","ease":"power3.inOut"}]'
                                      data-textAlign="['inherit','inherit','inherit','inherit']">
-                                    <img src="images/home-banner/orange-bay-upper.jpg" data-ww="100%" data-hh="100%" alt="" data-no-retina><!--3000*1688-->
+                                    <img src="images/home-banner/orange-bay-upper.png" data-ww="100%" data-hh="100%" alt="" data-no-retina><!--3000*1688-->
                                 </div>
                                 <!-- end image layer -->
                                 <!-- start grass image layer -->
                                 <div class="tp-caption tp-resizeme rs-parallaxlevel-1 background-image-layer" 
                                      id="slide-01-layer-02" 
                                      data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
-                                     data-y="['bottom','bottom','bottom','bottom']" data-voffset="['-200','-100','-300','-100']" 
+                                     data-y="['bottom','bottom','bottom','bottom']" data-voffset="['-150','-100','-300','-100']" 
                                      data-width="['2200','2000','2200','1600']"
                                      data-height="auto"
                                      data-whitespace="nowrap"
@@ -185,7 +185,7 @@
                                      data-frames='[{"delay":0,"speed":1000,"frame":"0","from":"y:-30:z:0;rX:0deg;rY:0;rZ:0;sX:1.5;sY:1.5;skX:0;skY:0;fb:10;opacity:0;","to":"o:1;fb:0;","ease":"power2.out"},{"delay":"wait","speed":1200,"frame":"999","to":"x:left(L);sX:1;sY:1;opacity:1;","ease":"power3.inOut"}]'
                                      data-textAlign="['inherit','inherit','inherit','inherit']"
                                      >
-                                    <img src="images/home-banner/orange-bay-bottom.jpg" data-ww="100%" data-hh="auto" alt="" data-no-retina><!--travel-agency-slider-06-->
+                                    <img src="images/home-banner/orange-bay-bottom.png" data-ww="100%" data-hh="auto" alt="" data-no-retina><!--travel-agency-slider-06-->
                                 </div>
                                 <!-- end image layer -->
                                 <!-- start image layer -->
