add orange bay trip

--- a/public/index.html
+++ b/public/index.html
@@ -1969,13 +1969,13 @@
                                     <div class="overflow-hidden border-radius-6px box-shadow-large">
                                         <div class="image">
                                             <a href="tour-details.html">
-                                                <img class="w-100" src="images/home-banner/orange-bay-dolphine.png" alt=""><!--800*655-->
+                                                <img class="w-100" src="images/tours/orange bay-trip.jpg" alt=""><!--800*655-->
                                             </a>
                                         </div> 
                                         <div class="bg-white p-35px position-relative">
-                                            <div class="bg-base-color ps-15px pe-15px fs-14 text-uppercase fw-500 d-inline-block text-white position-absolute right-0px top-0px">10 days</div>
+                                            <div class="bg-base-color ps-15px pe-15px fs-14 text-uppercase fw-500 d-inline-block text-white position-absolute right-0px top-0px">Daily</div>
                                             <div class="fs-24 fw-700 text-dark-gray"><span class="text-uppercase d-block fs-14 lh-18 fw-500 text-medium-gray">Just</span>$1299<span class="ms-5px position-relative text-red fs-19 fw-500">$1500<span class="w-100 h-1px position-absolute left-0px top-50 bg-red"></span></span></div>
-                                            <a href="demo-travel-agency-tour-details-page.html" class="mt-10px fs-18 text-dark-gray fw-500 lh-26 d-block">Majestic india life and great wildlife.</a>
+                                            <a href="demo-travel-agency-tour-details-page.html" class="mt-10px fs-18 text-dark-gray fw-500 lh-26 d-block">Orange Bay.</a>
                                             <div class="d-flex align-items-center pt-15px mt-20px border-top border-color-extra-medium-gray">
                                                 <span class="fw-500 fs-14 d-inline-block text-uppercase">18 Reviews</span>
                                                 <div class="review-star-icon ms-auto">
