--- a/public/index.html
+++ b/public/index.html
@@ -1974,8 +1974,8 @@
                                         </div> 
                                         <div class="bg-white p-35px position-relative">
                                             <div class="bg-base-color ps-15px pe-15px fs-14 text-uppercase fw-500 d-inline-block text-white position-absolute right-0px top-0px">Daily</div>
-                                            <div class="fs-24 fw-700 text-dark-gray"><span class="text-uppercase d-block fs-14 lh-18 fw-500 text-medium-gray">Just</span>$1299<span class="ms-5px position-relative text-red fs-19 fw-500">$1500<span class="w-100 h-1px position-absolute left-0px top-50 bg-red"></span></span></div>
-                                            <a href="demo-travel-agency-tour-details-page.html" class="mt-10px fs-18 text-dark-gray fw-500 lh-26 d-block">Orange Bay.</a>
+                                            <div class="fs-24 fw-700 text-dark-gray"><span class="text-uppercase d-block fs-14 lh-18 fw-500 text-medium-gray">Just</span>$30</span></div>
+                                            <a href="tour-details.html" class="mt-10px fs-18 text-dark-gray fw-500 lh-26 d-block">Orange Bay Island.</a>
                                             <div class="d-flex align-items-center pt-15px mt-20px border-top border-color-extra-medium-gray">
                                                 <span class="fw-500 fs-14 d-inline-block text-uppercase">18 Reviews</span>
                                                 <div class="review-star-icon ms-auto">
