--- a/public/tour-details.html
+++ b/public/tour-details.html
@@ -143,7 +143,7 @@
                 <div class="row align-items-center justify-content-center extra-small-screen">
                     <div class="col-lg-6 col-md-8 position-relative text-center page-title-extra-large" data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                         <h2 class="text-uppercase mb-10px alt-font text-white fw-500 bg-dark-gray border-radius-4px">Amazing tour</h2>
-                        <h1 class="mb-0 text-white alt-font ls-minus-2px text-uppercase fw-600 text-shadow-double-large">Maldives islands</h1>
+                        <h1 class="mb-0 text-white alt-font ls-minus-2px text-uppercase fw-600 text-shadow-double-large">Orange Bay Island</h1>
                     </div>
                 </div>
             </div>
@@ -157,9 +157,9 @@
                     <div class="col-lg-8 md-mb-50px sm-mb-35px">
                         <div class="row align-items-center mb-25px">
                             <div class="col-sm-9">
-                                <h3 class="alt-font text-dark-gray fw-600 mb-10px ls-minus-1px">Discover depth of beach</h3>
+                                <h3 class="alt-font text-dark-gray fw-600 mb-10px ls-minus-1px">Orange Bay Island </h3>
                                 <ul class="p-0 m-0 list-style-02 d-block d-sm-flex">
-                                    <li class="text-dark-gray fw-500"><i class="bi bi-geo-alt icon-small me-5px"></i>Maldives, South Asia</li>
+                                    <li class="text-dark-gray fw-500"><i class="bi bi-geo-alt icon-small me-5px"></i>hurghada, Egypt</li>
                                     <li class="ms-20px xs-ms-0">
                                         <div class="review-star-icon fs-18 me-5px">
                                             <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -169,18 +169,18 @@
                                 </ul>
                             </div>
                             <div class="col-sm-3 text-sm-end xs-mt-10px">
-                                <h4 class="text-dark-gray fw-600 mb-0">$1599</h4>
+                                <h4 class="text-dark-gray fw-600 mb-0">$30</h4>
                                 <span class="d-block lh-22">Per person</span>
                             </div>
                         </div>
                         <div class="row mb-50px xs-mb-40px">
                             <div class="col-12">
                                 <ul class="p-0 list-style-02 d-flex flex-wrap border-top border-bottom border-color-extra-medium-gray pt-20px pb-20px mb-25px">
-                                    <li class="me-30px"><i class="bi bi-calendar-check text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">15 Days</span></li>
-                                    <li class="me-30px"><i class="bi bi-person-plus text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">12+ Age</span></li>
+                                    <li class="me-30px"><i class="bi bi-calendar-check text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">Daily</span></li>
+                                    <li class="me-30px"><i class="bi bi-person-plus text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">7+ Age</span></li>
                                     <li class="me-30px"><i class="bi bi-water text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">Beaches</span></li>
-                                    <li class="me-30px"><i class="bi bi-clouds text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">Air rides</span></li>
-                                    <li><i class="bi bi-sun text-base-color icon-extra-medium me-10px"></i><span class="text-dark-gray fw-500">City sightseeing</span></li>
+                                    <li class="me-30px"><i class="bi bi-clouds text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">Amazing views</span></li>
+                                    <li><i class="bi bi-sun text-base-color icon-extra-medium me-10px"></i><span class="text-dark-gray fw-500">Island sightseeing</span></li>
                                 </ul>
                                 <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard dummy text ever since the, when an unknown  rinter took galley of type and scrambled it to make a type specimen book. it has survived not only five centuries, but also the leap into electronic typesetting,  emaining essentially unchanged.</p>
                                 <img src="https://via.placeholder.com/784x450" alt="" />  
