change trip details

--- a/public/tour-details.html
+++ b/public/tour-details.html
@@ -177,12 +177,12 @@
                             <div class="col-12">
                                 <ul class="p-0 list-style-02 d-flex flex-wrap border-top border-bottom border-color-extra-medium-gray pt-20px pb-20px mb-25px">
                                     <li class="me-30px"><i class="bi bi-calendar-check text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">Daily</span></li>
-                                    <li class="me-30px"><i class="bi bi-person-plus text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">7+ Age</span></li>
+                                    <!-- <li class="me-30px"><i class="bi bi-person-plus text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">7+ Age</span></li> -->
                                     <li class="me-30px"><i class="bi bi-water text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">Beaches</span></li>
                                     <li class="me-30px"><i class="bi bi-clouds text-base-color icon-extra-medium me-10px"></i> <span class="text-dark-gray fw-500">Amazing views</span></li>
                                     <li><i class="bi bi-sun text-base-color icon-extra-medium me-10px"></i><span class="text-dark-gray fw-500">Island sightseeing</span></li>
                                 </ul>
-                                <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. lorem ipsum has been the industry's standard dummy text ever since the, when an unknown  rinter took galley of type and scrambled it to make a type specimen book. it has survived not only five centuries, but also the leap into electronic typesetting,  emaining essentially unchanged.</p>
+                                <p>Get ready for an unforgettable adventure on one of the most renowned islands in the Red Sea, often dubbed the Egyptian Maldives! Dive into the sparkling crystal-clear waters and indulge in top-notch beverages served by the island's legendary bars and pubs. Your dream getaway awaits!</p>
                                 <img src="https://via.placeholder.com/784x450" alt="" />  
                             </div>
                         </div>
@@ -194,20 +194,21 @@
                         <div class="row row-cols-1 row-cols-md-2 mb-50px xs-mb-40px">
                             <div class="col">
                                 <ul class="p-0 m-0 list-style-02 text-dark-gray sm-mb-20px">
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Airport transfers</li>
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Buffet breakfast</li>
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Cruise dinner & music event</li>
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Driver allowances</li>
-                                    <li><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Toll tax and state tax</li> 
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Snorkling equipment</li>
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Snorkling Guide</li>
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Soft Drinks</li>
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>Lunch on the boat</li>
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-check-circle-fill fs-22 text-green me-10px"></i>2 Snorkling stops</li>
+                                    
                                 </ul>
                             </div> 
                             <div class="col">
                                 <ul class="p-0 m-0 list-style-02 text-dark-gray">
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Superior accommodation</li>
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Travel insurance</li>
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Departure taxes</li>
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Additional services</li>
-                                    <li><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Personal guide</li> 
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Island Bars</li>
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Isalnd resturants</li>
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Island snorkling</li>
+                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i></li>
+                                     
                                 </ul>
                             </div>  
                         </div>
@@ -223,9 +224,9 @@
                                     <!-- start gallery item -->
                                     <li class="grid-item transition-inner-all">
                                         <div class="gallery-box">
-                                            <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
+                                            <a href="images/tours/orange bay.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title"><!--800*630-->
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
-                                                    <img src="https://via.placeholder.com/800x630" alt="" />
+                                                    <img src="images/tours/orang bay 3.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
                                                         <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-white">
                                                             <i class="feather icon-feather-search text-dark-gray icon-small"></i>
@@ -432,7 +433,7 @@
                                         <textarea class="ps-0 border-radius-0px border-bottom border-color-transparent-dark-very-light bg-transparent form-control" name="comment" placeholder="Your message" rows="2"></textarea>
                                         <span class="form-icon"><i class="bi bi-chat-square-dots icon-small"></i></span>
                                         <input type="hidden" name="redirect" value="">
-                                        <button class="btn btn-medium btn-dark-gray btn-round-edge btn-box-shadow mt-25px w-100 submit" type="submit" aria-label="submit">Send message</button>
+                                        <button class="btn btn-medium btn-dark-gray btn-round-edge btn-box-shadow mt-25px w-100 submit" type="submit" aria-label="submit">Book With Us</button>
                                         <div class="form-results mt-20px d-none"></div>
                                     </div>
                                 </form>
