--- a/public/tour-details.html
+++ b/public/tour-details.html
@@ -183,7 +183,7 @@
                                     <li><i class="bi bi-sun text-base-color icon-extra-medium me-10px"></i><span class="text-dark-gray fw-500">Island sightseeing</span></li>
                                 </ul>
                                 <p>Get ready for an unforgettable adventure on one of the most renowned islands in the Red Sea, often dubbed the Egyptian Maldives! Dive into the sparkling crystal-clear waters and indulge in top-notch beverages served by the island's legendary bars and pubs. Your dream getaway awaits!</p>
-                                <img src="https://via.placeholder.com/784x450" alt="" />  
+                                <img src="images/tours/orange-bay.jpg" alt="" /><!--784*450--> 
                             </div>
                         </div>
                         <div class="row">
@@ -224,7 +224,7 @@
                                     <!-- start gallery item -->
                                     <li class="grid-item transition-inner-all">
                                         <div class="gallery-box">
-                                            <a href="images/tours/orange bay.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title"><!--800*630-->
+                                            <a href="images/tours/orang bay 3.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title"><!--800*630-->
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
                                                     <img src="images/tours/orang bay 3.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
@@ -242,7 +242,7 @@
                                         <div class="gallery-box">
                                             <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
-                                                    <img src="https://via.placeholder.com/800x630" alt="" />
+                                                    <img src="https://via.placeholder.com/800x630" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
                                                         <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-white">
                                                             <i class="feather icon-feather-search text-dark-gray icon-small"></i>
