adding photo gallery to tour-details

--- a/public/tour-details.html
+++ b/public/tour-details.html
@@ -137,7 +137,7 @@
         </header>
         <!-- end header -->
         <!-- start page title -->
-        <section class="page-title-button-style cover-background position-relative ipad-top-space-margin top-space-padding md-pt-20px" style="background-image: url('images/home-tours-test-2.jpg')"><!--1920*590-->
+        <section class="page-title-button-style cover-background position-relative ipad-top-space-margin top-space-padding md-pt-20px" style="background-image: url('images/home-banner/orange-bay.jpg')"><!--1920*590-->
             <div class="opacity-light bg-bay-of-many-blue"></div>
             <div class="container">
                 <div class="row align-items-center justify-content-center extra-small-screen">
@@ -207,7 +207,6 @@
                                     <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Island Bars</li>
                                     <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Isalnd resturants</li>
                                     <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i>Island snorkling</li>
-                                    <li class="border-bottom border-color-extra-medium-gray pb-10px mb-10px"><i class="bi bi-x-circle-fill fs-22 text-red me-10px"></i></li>
                                      
                                 </ul>
                             </div>  
@@ -224,9 +223,9 @@
                                     <!-- start gallery item -->
                                     <li class="grid-item transition-inner-all">
                                         <div class="gallery-box">
-                                            <a href="images/tours/orang bay 3.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title"><!--800*630-->
+                                            <a href="images/tours/orange-bay-gallery-1.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title"><!--800*630-->
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
-                                                    <img src="images/tours/orang bay 3.jpg" alt="" /><!--800*630-->
+                                                    <img src="images/tours/orange-bay-gallery-1.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
                                                         <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-white">
                                                             <i class="feather icon-feather-search text-dark-gray icon-small"></i>
@@ -240,9 +239,9 @@
                                     <!-- start gallery item -->
                                     <li class="grid-item transition-inner-all">
                                         <div class="gallery-box">
-                                            <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
+                                            <a href="images/tours/orange-bay-gallery-2.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
-                                                    <img src="https://via.placeholder.com/800x630" alt="" /><!--800*630-->
+                                                    <img src="images/tours/orange-bay-gallery-2.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
                                                         <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-white">
                                                             <i class="feather icon-feather-search text-dark-gray icon-small"></i>
@@ -256,9 +255,9 @@
                                     <!-- start gallery item -->
                                     <li class="grid-item transition-inner-all">
                                         <div class="gallery-box">
-                                            <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
+                                            <a href="images/tours/orange-bay-gallery-3.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
-                                                    <img src="https://via.placeholder.com/800x630" alt="" />
+                                                    <img src="images/tours/orange-bay-gallery-3.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
                                                         <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-white">
                                                             <i class="feather icon-feather-search text-dark-gray icon-small"></i>
