--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
                             <!-- MINIMUM SLIDE STRUCTURE -->
                             <li id="rs-travel-agency-01" data-index="rs-travel-agency-01" data-transition="slidehorizontal" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="0" data-fsslotamount="2" data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10='{"revslider-weather-addon":{"type":"name","name":"Cologne","woeid":"667931","unit":"c"}}' data-description="">
                                 <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
-                                <img src="images/home-banner/orange bay.jpg" alt="dummy" class="rev-slidebg"><!--3000*1688-->
+                                <img src="images/home-banner/orange-bay.jpg" alt="dummy" class="rev-slidebg"><!--3000*1688-->
                                 <!-- start image layer -->
                                 <div class="tp-caption tp-resizeme rs-parallaxlevel-2 background-image-layer" 
                                      id="slide-01-layer-01" 
@@ -1969,7 +1969,7 @@
                                     <div class="overflow-hidden border-radius-6px box-shadow-large">
                                         <div class="image">
                                             <a href="tour-details.html">
-                                                <img class="w-100" src="images/tours/orange bay-trip.jpg" alt=""><!--800*655-->
+                                                <img class="w-100" src="images/home-banner/orange-bay.jpg" alt=""><!--800*655-->
                                             </a>
                                         </div> 
                                         <div class="bg-white p-35px position-relative">
