fix tour-details footer

--- a/public/tour-details.html
+++ b/public/tour-details.html
@@ -569,22 +569,22 @@
                 <!-- start instagram -->
                 <div class="row align-items-center justify-content-center mb-40px g-0 row-cols-3 row-cols-md-6 row-cols-sm-3 instagram-follow-api position-relative">
                     <div class="col instafeed-grid">
-                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="https://via.placeholder.com/600x600" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
+                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="images/footer/instagram-test-1.jpg" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure><!--600*600-->
                     </div>  
                     <div class="col instafeed-grid">
-                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="https://via.placeholder.com/600x600" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
+                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="images/footer/insatgram-test-2.jpg" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
                     </div>
                     <div class="col instafeed-grid">
-                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="https://via.placeholder.com/600x600" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
+                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="images/footer/instagram-test-3.jpg" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
                     </div>
                     <div class="col instafeed-grid">
-                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="https://via.placeholder.com/600x600" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
+                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="images/footer/instagram-test-4.jpg" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
                     </div>
                     <div class="col instafeed-grid">
-                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="https://via.placeholder.com/600x600" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
+                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="images/footer/instagram-test-5.jpg" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
                     </div>
                     <div class="col instafeed-grid">
-                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="https://via.placeholder.com/600x600" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
+                        <figure class="border-radius-0px"><a href="https://www.instagram.com" target="_blank"><img src="images/footer/instagram-test-6.jpg" class="insta-image" alt=""><span class="insta-icon"><i class="fa-brands fa-instagram"></i></span></a></figure>
                     </div> 
                     <div class="absolute-middle-center z-index-1 w-auto">
                         <a href="https://www.instagram.com" target="_blank" class="btn btn-medium btn-switch-text btn-white btn-round-edge fw-600 ls-0px left-icon btn-box-shadow instagram-button">
