fix tour-details footer urls

--- a/public/tour-details.html
+++ b/public/tour-details.html
@@ -602,6 +602,7 @@
                     </div>
                     <div class="col-xl-6 text-center lg-mt-10px sm-mt-0 sm-mb-15px order-1 order-xl-2 order-md-3"> 
                         <ul class="footer-navbar"> 
+                            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                             <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                             <li class="nav-item"><a href="tours.html" class="nav-link">Tours</a></li>
                             <li class="nav-item"><a href="reviews.html" class="nav-link">Reviews</a></li>
